[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faiss-cpu>=1.11.0",
    "jieba>=0.42.1",
    "langchain[openai]>=0.3.26",
    "langchain-community>=0.3.26",
    "langchain-huggingface>=0.3.0",
    "nltk>=3.9.1",
    "rank-bm25>=0.2.2",
    "spacy>=3.8.7",
    "langchain-groq>=0.3.4",
    "cohere>=5.15.0",
]


[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
