[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faiss-cpu>=1.11.0",
    "jieba>=0.42.1",
    "langchain>=1.0.0",
    "langchain-core>=1.0.0",
    "langchain-classic>=1.0.0",
    "langchain-community>=0.4.0",
    "langchain-huggingface>=1.0.0",
    "langchain-openai>=1.0.0",
    "langchain-text-splitters>=1.0.0",
    "nltk>=3.9.1",
    "rank-bm25>=0.2.2",
    "spacy>=3.8.7",
    "cohere>=5.15.0",
    "gradio>=5.34.2",
]


[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
